force-app/main/default/objects/LiveChatTranscript/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Visitor requested info on plan account # during chatbot session</description>
    <inlineHelpText>Visitor requested info on plan account # during chatbot session</inlineHelpText>
    <label>Account #</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>