force-app/main/default/objects/LiveChatTranscript/fields/Add_to_Census__c.field-meta.xml
<CustomField>
    <fullName>Add_to_Census__c</fullName>
    <description>Visitor requested info on adding an employee to the census during chatbot session</description>
    <inlineHelpText>Visitor requested info on adding an employee to the census during chatbot session</inlineHelpText>
    <label>Add to Census</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>