force-app/main/default/objects/LiveChatTranscript/fields/Amort_Sched__c.field-meta.xml
<CustomField>
    <fullName>Amort_Sched__c</fullName>
    <description>Visitor requested info on amortization schedule during chatbot session</description>
    <inlineHelpText>Visitor requested info on amortization schedule during chatbot session</inlineHelpText>
    <label>Amort Sched</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>