force-app/main/default/objects/LiveChatTranscript/fields/Annual_contribution_timing__c.field-meta.xml
<CustomField>
    <fullName>Annual_contribution_timing__c</fullName>
    <description>Chat subtopic flag field</description>
    <inlineHelpText>Chat subtopic flag field</inlineHelpText>
    <label>Annual contribution timing</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>