force-app/main/default/objects/LiveChatTranscript/fields/Annual_Payroll__c.field-meta.xml
<CustomField>
    <fullName>Annual_Payroll__c</fullName>
    <description>Visitor requested info on submitting an annual payroll during chatbot session</description>
    <inlineHelpText>Visitor requested info on submitting an annual payroll during chatbot session</inlineHelpText>
    <label>Annual Payroll</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>