force-app/main/default/objects/LiveChatTranscript/fields/Auto_Rebalance__c.field-meta.xml
<CustomField>
    <fullName>Auto_Rebalance__c</fullName>
    <description>Visitor selected info on auto rebalances during chatbot session</description>
    <inlineHelpText>Visitor selected info on auto rebalances during chatbot session</inlineHelpText>
    <label>Auto-Rebalance</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>