force-app/main/default/objects/LiveChatTranscript/fields/Bank_Info__c.field-meta.xml
<CustomField>
    <fullName>Bank_Info__c</fullName>
    <description>Visitor requested info on updating funding bank info during chat session</description>
    <inlineHelpText>Visitor requested info on updating funding bank info during chat session</inlineHelpText>
    <label>Bank Info</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>