force-app/main/default/objects/LiveChatTranscript/fields/Calculate_Employer_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Calculate_Employer_Contribution__c</fullName>
    <description>Chat subtopic flag field</description>
    <inlineHelpText>Chat subtopic flag field</inlineHelpText>
    <label>Calculate Employer Contribution</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>