force-app/main/default/objects/LiveChatTranscript/fields/Catch_Up_Contributions__c.field-meta.xml
<CustomField>
    <fullName>Catch_Up_Contributions__c</fullName>
    <description>Chat subtopic flag field</description>
    <inlineHelpText>Chat subtopic flag field</inlineHelpText>
    <label>Catch Up Contributions</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>