force-app/main/default/objects/LiveChatTranscript/fields/Change_contribution_during_enrollment__c.field-meta.xml
<CustomField>
    <fullName>Change_contribution_during_enrollment__c</fullName>
    <description>Chat subtopic flag field</description>
    <inlineHelpText>Chat subtopic flag field</inlineHelpText>
    <label>Change contribution during enrollment</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>