force-app/main/default/objects/LiveChatTranscript/fields/Change_Payments__c.field-meta.xml
<CustomField>
    <fullName>Change_Payments__c</fullName>
    <description>Visitor asked for info on changing loan payment schedule during chatbot session</description>
    <inlineHelpText>Visitor asked for info on changing loan payment schedule during chatbot session</inlineHelpText>
    <label>Change Payments</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>