force-app/main/default/objects/LiveChatTranscript/fields/Change_Rebalance__c.field-meta.xml
<CustomField>
    <fullName>Change_Rebalance__c</fullName>
    <description>Visitor requested info to change/rebalance investments during chatbot session</description>
    <inlineHelpText>Visitor requested info to change/rebalance investments during chatbot session</inlineHelpText>
    <label>Change/Rebalance</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>