force-app/main/default/objects/LiveChatTranscript/fields/Chat_Count__c.field-meta.xml
<CustomField>
    <fullName>Chat_Count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chat Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>