force-app/main/default/objects/LiveChatTranscript/fields/Chat_Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Chat_Duration_Minutes__c</fullName>
    <formula>ChatDuration / 60</formula>
    <label>Chat Duration - Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>