force-app/main/default/objects/LiveChatTranscript/fields/Chat_Request_Time__c.field-meta.xml
<CustomField>
    <fullName>Chat_Request_Time__c</fullName>
    <label>Chat Request Time</label>
    <type>Time</type>
</CustomField>