force-app/main/default/objects/LiveChatTranscript/fields/Chat_Request_Time_Text__c.field-meta.xml
<CustomField>
    <fullName>Chat_Request_Time_Text__c</fullName>
    <label>Chat Request Time Text</label>
    <length>20</length>
    <type>Text</type>
</CustomField>