force-app/main/default/objects/LiveChatTranscript/fields/Chat_Week_Number__c.field-meta.xml
<CustomField>
    <fullName>Chat_Week_Number__c</fullName>
    <label>Chat Week Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>