force-app/main/default/objects/LiveChatTranscript/fields/ChatBot_Session__c.field-meta.xml
<CustomField>
    <fullName>ChatBot_Session__c</fullName>
    <description>1 = ChatBot started the chat</description>
    <inlineHelpText>1 = ChatBot started the chat</inlineHelpText>
    <label>ChatBot Session</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>