force-app/main/default/objects/LiveChatTranscript/fields/Chatbot_Success__c.field-meta.xml
<CustomField>
    <fullName>Chatbot_Success__c</fullName>
    <description>1 = Client reached end of a path for a final answer and selected &quot;Yes, that&apos;s all I needed&quot;</description>
    <inlineHelpText>1 = Client reached end of a path for a final answer and selected &quot;Yes, that&apos;s all I needed&quot;</inlineHelpText>
    <label>ChatBot full deflection</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>