force-app/main/default/objects/LiveChatTranscript/fields/ChatBot_Unanswered__c.field-meta.xml
<CustomField>
    <fullName>ChatBot_Unanswered__c</fullName>
    <description>1 = Client reached end of chatbot path and selected &quot;No, I need additional help&quot;</description>
    <inlineHelpText>1 = Client reached end of chatbot path and selected &quot;No, I need additional help&quot;</inlineHelpText>
    <label>ChatBot Unanswered</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>