force-app/main/default/objects/LiveChatTranscript/fields/ChatTimeText__c.field-meta.xml
<CustomField>
    <fullName>ChatTimeText__c</fullName>
    <description>Request Time as Text.   March - November = (RequestTime - 0.29166666)     November to March = (RequestTime - 0.333333)</description>
    <formula>LEFT(RIGHT(text(  RequestTime -0.2916666 ),9),8)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Request Time as Text</inlineHelpText>
    <label>ChatTimeText</label>
    <type>Text</type>
</CustomField>