force-app/main/default/objects/LiveChatTranscript/fields/Contribution_Limit__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Limit__c</fullName>
    <description>Chat subtopic flag field</description>
    <inlineHelpText>Chat subtopic flag field</inlineHelpText>
    <label>Contribution Limit</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>