force-app/main/default/objects/LiveChatTranscript/fields/Date_of_Term__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Term__c</fullName>
    <description>Visitor requested info on adding DOT during chatbot session</description>
    <inlineHelpText>Visitor requested info on adding DOT during chatbot session</inlineHelpText>
    <label>Date of Term</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>