force-app/main/default/objects/LiveChatTranscript/fields/Day_of_Week__c.field-meta.xml
<CustomField>
    <fullName>Day_of_Week__c</fullName>
    <description>Day of Week the chat was requested</description>
    <formula>CASE(WEEKDAY(DATEVALUE( CreatedDate )), 
1,&quot;Sunday&quot;, 
2,&quot;Monday&quot;, 
3,&quot;Tuesday&quot;, 
4,&quot;Wednesday&quot;, 
5,&quot;Thursday&quot;, 
6,&quot;Friday&quot;, 
7,&quot;Saturday&quot;, 
&quot;&quot;)</formula>
    <inlineHelpText>Day of Week the chat was requested</inlineHelpText>
    <label>Day of Week</label>
    <type>Text</type>
</CustomField>