force-app/main/default/objects/LiveChatTranscript/fields/EE_ER_Info__c.field-meta.xml
<CustomField>
    <fullName>EE_ER_Info__c</fullName>
    <description>Visitor requested info on updating EE or ER info during chatbot session</description>
    <inlineHelpText>Visitor requested info on updating EE or ER info during chatbot session</inlineHelpText>
    <label>Update EE|ER Info</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>