force-app/main/default/objects/LiveChatTranscript/fields/Employed__c.field-meta.xml
<CustomField>
    <fullName>Employed__c</fullName>
    <description>Visitor selected &quot;Yes I am still employed&quot; during chatbot session</description>
    <inlineHelpText>Visitor selected &quot;Yes I am still employed&quot; during chatbot session</inlineHelpText>
    <label>Employed</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>