force-app/main/default/objects/LiveChatTranscript/fields/Employee_Info__c.field-meta.xml
<CustomField>
    <fullName>Employee_Info__c</fullName>
    <description>Visitor requested info on updating employee emails during chatbot session</description>
    <inlineHelpText>Visitor requested info on updating employee emails during chatbot session</inlineHelpText>
    <label>Employee Info</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>