force-app/main/default/objects/LiveChatTranscript/fields/Employer_Contribution_Amount__c.field-meta.xml
<CustomField>
    <fullName>Employer_Contribution_Amount__c</fullName>
    <description>Chat subtopic flag field</description>
    <inlineHelpText>Chat subtopic flag field</inlineHelpText>
    <label>Employer Contribution Amount</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>