force-app/main/default/objects/LiveChatTranscript/fields/Enroll_Email__c.field-meta.xml
<CustomField>
    <fullName>Enroll_Email__c</fullName>
    <description>Visitor requested info on sending enrollment email during chatbot session</description>
    <inlineHelpText>Visitor requested info on sending enrollment email during chatbot session</inlineHelpText>
    <label>Enroll Email</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>