force-app/main/default/objects/LiveChatTranscript/fields/Future_Investments__c.field-meta.xml
<CustomField>
    <fullName>Future_Investments__c</fullName>
    <description>Visitor requested info to change future investments during chatbot session</description>
    <inlineHelpText>Visitor requested info to change future investments during chatbot session</inlineHelpText>
    <label>Future Investments</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>