force-app/main/default/objects/LiveChatTranscript/fields/Hardship__c.field-meta.xml
<CustomField>
    <fullName>Hardship__c</fullName>
    <description>Visitor selected Hardship withdrawal option during chatbot session</description>
    <inlineHelpText>Visitor selected Hardship withdrawal option during chatbot session</inlineHelpText>
    <label>Hardship</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>