force-app/main/default/objects/LiveChatTranscript/fields/Immediate_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Immediate_Transfer__c</fullName>
    <description>Client requested &quot;Transfer To Agent&quot; as their only action in ChatBot</description>
    <inlineHelpText>Client requested &quot;Transfer To Agent&quot; as their only action in ChatBot</inlineHelpText>
    <label>Immediate Transfer</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>