force-app/main/default/objects/LiveChatTranscript/fields/Interest_tax_form__c.field-meta.xml
<CustomField>
    <fullName>Interest_tax_form__c</fullName>
    <description>Chat subtopic flag field</description>
    <inlineHelpText>Chat subtopic flag field</inlineHelpText>
    <label>Interest tax form</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>