force-app/main/default/objects/LiveChatTranscript/fields/Investment_Options__c.field-meta.xml
<CustomField>
    <fullName>Investment_Options__c</fullName>
    <description>Visitor selected option to review Investment Options during chatbot session</description>
    <inlineHelpText>Visitor selected option to review Investment Options during chatbot session</inlineHelpText>
    <label>Investment Options</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>