force-app/main/default/objects/LiveChatTranscript/fields/Loan_Support__c.field-meta.xml
<CustomField>
    <fullName>Loan_Support__c</fullName>
    <description>Client selected Loan Support as main topic during chatbot session</description>
    <inlineHelpText>Client selected Loan Support as main topic during chatbot session</inlineHelpText>
    <label>Loan Support</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>