force-app/main/default/objects/LiveChatTranscript/fields/Loan_Terms__c.field-meta.xml
<CustomField>
    <fullName>Loan_Terms__c</fullName>
    <description>Visitor asked for info on loan terms during chatbot session</description>
    <inlineHelpText>Visitor asked for info on loan terms during chatbot session</inlineHelpText>
    <label>Loan Terms</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>