force-app/main/default/objects/LiveChatTranscript/fields/Loans_allowed__c.field-meta.xml
<CustomField>
    <fullName>Loans_allowed__c</fullName>
    <description>Visitor asked if Loans are allowed during chatbot session</description>
    <inlineHelpText>Visitor asked if Loans are allowed during chatbot session</inlineHelpText>
    <label>Loans allowed?</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>