force-app/main/default/objects/LiveChatTranscript/fields/Manage_Contributions__c.field-meta.xml
<CustomField>
    <fullName>Manage_Contributions__c</fullName>
    <description>Flags ChatBot main topic of Manage Contributions</description>
    <inlineHelpText>Flags ChatBot main topic of Manage Contributions</inlineHelpText>
    <label>Manage Contributions</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>