force-app/main/default/objects/LiveChatTranscript/fields/Manage_Investments__c.field-meta.xml
<CustomField>
    <fullName>Manage_Investments__c</fullName>
    <description>Visitor selected &quot;Manage Investments&quot; main topic during chatbot session</description>
    <inlineHelpText>Visitor selected &quot;Manage Investments&quot; main topic during chatbot session</inlineHelpText>
    <label>Manage Investments</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>