force-app/main/default/objects/LiveChatTranscript/fields/Max_Loan__c.field-meta.xml
<CustomField>
    <fullName>Max_Loan__c</fullName>
    <description>Visitor requested info on maximum loan during chatbot session</description>
    <inlineHelpText>Visitor requested info on maximum loan during chatbot session</inlineHelpText>
    <label>Max Loan</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>