force-app/main/default/objects/LiveChatTranscript/fields/Missed__c.field-meta.xml
<CustomField>
    <fullName>Missed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If chat was missed - used for reporting</description>
    <inlineHelpText>If chat was missed - used for reporting</inlineHelpText>
    <label>Missed</label>
    <type>Checkbox</type>
</CustomField>