force-app/main/default/objects/LiveChatTranscript/fields/Money_in_or_out__c.field-meta.xml
<CustomField>
    <fullName>Money_in_or_out__c</fullName>
    <description>Chat visitor selected main topic of Move money in or out of my account</description>
    <inlineHelpText>Chat visitor selected main topic of Move money in or out of my account</inlineHelpText>
    <label>Money in or out</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>