force-app/main/default/objects/LiveChatTranscript/fields/Move_In__c.field-meta.xml
<CustomField>
    <fullName>Move_In__c</fullName>
    <description>Visitor selected &quot;Move money into my account&quot; during chatbot session</description>
    <inlineHelpText>Visitor selected &quot;Move money into my account&quot; during chatbot session</inlineHelpText>
    <label>Move $ In</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>