force-app/main/default/objects/LiveChatTranscript/fields/Move_In_Out__c.field-meta.xml
<CustomField>
    <fullName>Move_In_Out__c</fullName>
    <description>Visitor requested main topic of move money in or out during chatbot session</description>
    <inlineHelpText>Visitor requested main topic of move money in or out during chatbot session</inlineHelpText>
    <label>Move $ In|Out</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>