force-app/main/default/objects/LiveChatTranscript/fields/Move_money_to_new_investments__c.field-meta.xml
<CustomField>
    <fullName>Move_money_to_new_investments__c</fullName>
    <description>Visitor selected option to move $ to new investments during chatbot session</description>
    <inlineHelpText>Visitor selected option to move $ to new investments during chatbot session</inlineHelpText>
    <label>$ to New Investments</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>