force-app/main/default/objects/LiveChatTranscript/fields/Move_Out__c.field-meta.xml
<CustomField>
    <fullName>Move_Out__c</fullName>
    <description>Visitor selected &quot;Move money out of my account&quot; during chatbot session.</description>
    <inlineHelpText>Visitor selected &quot;Move money out of my account&quot; during chatbot session.</inlineHelpText>
    <label>Move $ Out</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>