force-app/main/default/objects/LiveChatTranscript/fields/Name_Birth_Hire__c.field-meta.xml
<CustomField>
    <fullName>Name_Birth_Hire__c</fullName>
    <description>Visitor requested info on updating name, DOB or DOH during chatbot session</description>
    <inlineHelpText>Visitor requested info on updating name, DOB or DOH during chatbot session</inlineHelpText>
    <label>Name|Birth|Hire</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>