force-app/main/default/objects/LiveChatTranscript/fields/Neg_Adjust__c.field-meta.xml
<CustomField>
    <fullName>Neg_Adjust__c</fullName>
    <description>Visitor requested info on negative payroll adjustment during chatbot session</description>
    <inlineHelpText>Visitor requested info on negative payroll adjustment during chatbot session</inlineHelpText>
    <label>Neg Adjust</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>