force-app/main/default/objects/LiveChatTranscript/fields/No_Verified_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>No_Verified_Endpoint__c</fullName>
    <description>1 = Visitor ended chat before selecting Submit Ticket, Transfer to Agent, Yes, that&apos;s all I need, or No, I need additional help</description>
    <inlineHelpText>1 = Visitor ended chat before selecting Submit Ticket, Transfer to Agent, Yes, that&apos;s all I need, or No, I need additional help</inlineHelpText>
    <label>No Verified Endpoint</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>