force-app/main/default/objects/LiveChatTranscript/fields/Not_Employed__c.field-meta.xml
<CustomField>
    <fullName>Not_Employed__c</fullName>
    <description>Visitor selected, &quot;No I&apos;m not employed&quot; during chatbot session</description>
    <inlineHelpText>Visitor selected, &quot;No I&apos;m not employed&quot; during chatbot session</inlineHelpText>
    <label>Not Employed</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>