force-app/main/default/objects/LiveChatTranscript/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Chat Transcripts</relationshipLabel>
    <relationshipName>Chat_Transcripts</relationshipName>
    <type>Lookup</type>
</CustomField>