force-app/main/default/objects/LiveChatTranscript/fields/Outside_Biz_Hours__c.field-meta.xml
<CustomField>
    <fullName>Outside_Biz_Hours__c</fullName>
    <description>1 = Chat Request was initiated outside of Ubiquity Business Hours</description>
    <inlineHelpText>1 = Chat Request was initiated outside of Ubiquity Business Hours</inlineHelpText>
    <label>Outside Biz Hours</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>