force-app/main/default/objects/LiveChatTranscript/fields/Over_59_1_2_Cash__c.field-meta.xml
<CustomField>
    <fullName>Over_59_1_2_Cash__c</fullName>
    <description>Visitor employed over 59 1/2 requested cash withdrawal details during chatbot session</description>
    <inlineHelpText>Visitor employed over 59 1/2 requested cash withdrawal details during chatbot session</inlineHelpText>
    <label>Over 59 1/2 Cash</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>