force-app/main/default/objects/LiveChatTranscript/fields/Paradigm_Chat_Start_URL__c.field-meta.xml
<CustomField>
    <fullName>Paradigm_Chat_Start_URL__c</fullName>
    <description>URL Client started the chat from in Paradigm</description>
    <inlineHelpText>URL Client started the chat from in Paradigm</inlineHelpText>
    <label>Paradigm Chat Start URL</label>
    <type>Url</type>
</CustomField>