force-app/main/default/objects/LiveChatTranscript/fields/Paradigm_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Paradigm_Contact_Email__c</fullName>
    <description>Contact email passed in from Paradigm when chat starts</description>
    <inlineHelpText>Contact email passed in from Paradigm when chat starts</inlineHelpText>
    <label>Paradigm Contact Email</label>
    <type>Email</type>
</CustomField>