force-app/main/default/objects/LiveChatTranscript/fields/Paradigm_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Paradigm_Display_Name__c</fullName>
    <description>Display Name passed over from Paradigm when chat starts</description>
    <inlineHelpText>Display Name passed over from Paradigm when chat starts</inlineHelpText>
    <label>Paradigm Display Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>