force-app/main/default/objects/LiveChatTranscript/fields/Paradigm_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Paradigm_First_Name__c</fullName>
    <description>First Name passed in from Paradigm when chat starts</description>
    <inlineHelpText>First Name passed in from Paradigm when chat starts</inlineHelpText>
    <label>Paradigm First Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>