force-app/main/default/objects/LiveChatTranscript/fields/Paradigm_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Paradigm_Last_Name__c</fullName>
    <description>Last name passed through from Paradigm when chat starts</description>
    <inlineHelpText>Last name passed through from Paradigm when chat starts</inlineHelpText>
    <label>Paradigm Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>