force-app/main/default/objects/LiveChatTranscript/fields/Paradigm_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Paradigm_Phone_Number__c</fullName>
    <description>Phone number passed over from Paradigm when chat starts</description>
    <inlineHelpText>Phone number passed over from Paradigm when chat starts</inlineHelpText>
    <label>Paradigm Phone Number</label>
    <type>Phone</type>
</CustomField>