force-app/main/default/objects/LiveChatTranscript/fields/Paradigm_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Paradigm_Plan_Name__c</fullName>
    <description>Plan client is logged in to when chat is initiated from behind Paradigm login.</description>
    <inlineHelpText>Plan client is logged in to when chat is initiated from behind Paradigm login.</inlineHelpText>
    <label>Paradigm Plan Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>