force-app/main/default/objects/LiveChatTranscript/fields/Paradigm_Saver__c.field-meta.xml
<CustomField>
    <fullName>Paradigm_Saver__c</fullName>
    <description>True/False to verify if client is flagged as a Saver in Paradigm</description>
    <inlineHelpText>True/False to verify if client is flagged as a Saver in Paradigm</inlineHelpText>
    <label>Paradigm Saver</label>
    <length>10</length>
    <type>Text</type>
</CustomField>