force-app/main/default/objects/LiveChatTranscript/fields/Paradigm_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Paradigm_Sponsor__c</fullName>
    <description>True/False to verify if client is flagged as a Plan Sponsor in Paradigm</description>
    <inlineHelpText>True/False to verify if client is flagged as a Plan Sponsor in Paradigm</inlineHelpText>
    <label>Paradigm Sponsor?</label>
    <length>10</length>
    <type>Text</type>
</CustomField>