force-app/main/default/objects/LiveChatTranscript/fields/Pay_Cont_Support__c.field-meta.xml
<CustomField>
    <fullName>Pay_Cont_Support__c</fullName>
    <description>Visitor selected Payroll/Contribution support as main topic during chatbot session</description>
    <inlineHelpText>Visitor selected Payroll/Contribution support as main topic during chatbot session</inlineHelpText>
    <label>Pay|Cont Support</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>