force-app/main/default/objects/LiveChatTranscript/fields/Payroll_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Frequency__c</fullName>
    <description>Visitor requested info on changing payroll frequency during chatbot session</description>
    <inlineHelpText>Visitor requested info on changing payroll frequency during chatbot session</inlineHelpText>
    <label>Payroll Frequency</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>