force-app/main/default/objects/LiveChatTranscript/fields/Pos_Adjust__c.field-meta.xml
<CustomField>
    <fullName>Pos_Adjust__c</fullName>
    <description>Visitor requested info on positive payroll adjustment during chatbot session</description>
    <inlineHelpText>Visitor requested info on positive payroll adjustment during chatbot session</inlineHelpText>
    <label>Pos Adjust</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>