force-app/main/default/objects/LiveChatTranscript/fields/Pre_Chat_Company__c.field-meta.xml
<CustomField>
    <fullName>Pre_Chat_Company__c</fullName>
    <description>Company entered in pre-chat form</description>
    <inlineHelpText>Company entered in pre-chat form</inlineHelpText>
    <label>Pre-Chat Company</label>
    <length>100</length>
    <type>Text</type>
</CustomField>