force-app/main/default/objects/LiveChatTranscript/fields/Pre_Chat_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Pre_Chat_Email_Address__c</fullName>
    <description>Email address from Pre-Chat form</description>
    <inlineHelpText>Email address from Pre-Chat form</inlineHelpText>
    <label>Pre-Chat Email Address</label>
    <type>Email</type>
</CustomField>