force-app/main/default/objects/LiveChatTranscript/fields/Pre_Chat_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Pre_Chat_First_Name__c</fullName>
    <description>First Name from Pre-Chat form</description>
    <inlineHelpText>First Name from Pre-Chat form</inlineHelpText>
    <label>Pre-Chat First Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>