force-app/main/default/objects/LiveChatTranscript/fields/Pre_Chat_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Pre_Chat_Last_Name__c</fullName>
    <description>Last Name from Pre-Chat form</description>
    <inlineHelpText>Last Name from Pre-Chat form</inlineHelpText>
    <label>Pre-Chat Last Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>