force-app/main/default/objects/LiveChatTranscript/fields/Pre_Chat_Question__c.field-meta.xml
<CustomField>
    <fullName>Pre_Chat_Question__c</fullName>
    <description>Pre-Chat question asked by employee or employer</description>
    <inlineHelpText>Pre-Chat question asked by employee or employer</inlineHelpText>
    <label>Pre-Chat Question</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>