force-app/main/default/objects/LiveChatTranscript/fields/Pre_Chat_Role__c.field-meta.xml
<CustomField>
    <fullName>Pre_Chat_Role__c</fullName>
    <description>Role that was selected in Pre-Chat Form</description>
    <inlineHelpText>Role that was selected in Pre-Chat Form</inlineHelpText>
    <label>Pre-Chat Role</label>
    <length>30</length>
    <type>Text</type>
</CustomField>