force-app/main/default/objects/LiveChatTranscript/fields/Pre_Tax_ROTH_Combo__c.field-meta.xml
<CustomField>
    <fullName>Pre_Tax_ROTH_Combo__c</fullName>
    <description>Chat subtopic flag field</description>
    <inlineHelpText>Chat subtopic flag field</inlineHelpText>
    <label>Pre-Tax + ROTH Combo</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>