force-app/main/default/objects/LiveChatTranscript/fields/Recall_a_payroll__c.field-meta.xml
<CustomField>
    <fullName>Recall_a_payroll__c</fullName>
    <description>Chat subtopic flag field</description>
    <inlineHelpText>Chat subtopic flag field</inlineHelpText>
    <label>Recall a payroll</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>