force-app/main/default/objects/LiveChatTranscript/fields/Request_Week__c.field-meta.xml
<CustomField>
    <fullName>Request_Week__c</fullName>
    <formula>CEILING( ( DATEVALUE(CreatedDate) - DATE( YEAR( DATEVALUE(CreatedDate) ), 1, 1) + 1) / 7)</formula>
    <label>Request Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>