force-app/main/default/objects/LiveChatTranscript/fields/RMD__c.field-meta.xml
<CustomField>
    <fullName>RMD__c</fullName>
    <description>Visitor requested RMD info during chatbot session</description>
    <inlineHelpText>Visitor requested RMD info during chatbot session</inlineHelpText>
    <label>RMD</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>