force-app/main/default/objects/LiveChatTranscript/fields/Rollover_Out__c.field-meta.xml
<CustomField>
    <fullName>Rollover_Out__c</fullName>
    <description>Visitor requested info to roll funds out of the plan during chatbot session</description>
    <inlineHelpText>Visitor requested info to roll funds out of the plan during chatbot session</inlineHelpText>
    <label>Rollover Out</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>