force-app/main/default/objects/LiveChatTranscript/fields/ROTH_and_Pre_Tax_difference__c.field-meta.xml
<CustomField>
    <fullName>ROTH_and_Pre_Tax_difference__c</fullName>
    <description>Chat subtopic flag field</description>
    <inlineHelpText>Chat subtopic flag field</inlineHelpText>
    <label>ROTH and Pre-Tax difference</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>